Adds begining structure to HTML,. Adds Profile Pic. Adds context to readme

--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta lang="en-US">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Jamey Wicklund's Portfolio</title>
 </head>
+
 <body>
-  
+  <header>
+    <h1>Portfolio</h1>
+    <img src="./assets/images/profile-pic.jpeg" alt="Jamey Wicklund">
+    <h2>Jamey Wicklund</h2>
+
+    <nav>
+      <a href="">About Me</a>
+      <a href="">Resume</a>
+      <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
+      <a href="Contact"></a>
+      <a href="Projects"></a>
+    </nav>
+  </header>
+
+  <main>
+
+  </main>
+
+  <aside>
+    <section>
+      <!-- About ME -->
+    </section>
+    <section>
+      <!-- Resume -->
+    </section>
+    <section>
+      <!-- Contact Form -->
+    </section>
+  </aside>
 </body>
 </html>
