Begin styling HTML for mobile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta lang="en-US">
@@ -15,13 +16,17 @@
     <img src="./assets/images/profile-pic.jpeg" alt="Jamey Wicklund">
     <h2>Jamey Wicklund</h2>
 
-    <nav>
-      <a href="">About Me</a>
-      <a href="">Resume</a>
-      <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
-      <a href="Contact"></a>
-      <a href="Projects"></a>
-    </nav>
+    <section class="frame"></section>
+
+    <section id="nav-bar">
+      <nav>
+        <a href="">About Me</a>
+        <a href="">Resume</a>
+        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
+        <a href="">Contact Me</a>
+        <a href="">Projects</a>
+      </nav>
+    </section>
   </header>
 
   <main>
@@ -30,7 +35,8 @@
 
   <aside>
     <section>
-      <!-- About ME -->
+      <h3>About Me</h3>
+      <p>This is an about me section. -Input a paragraph or two here-</p>
     </section>
     <section>
       <!-- Resume -->
@@ -40,4 +46,5 @@
     </section>
   </aside>
 </body>
+
 </html>
