Added About ME and Resume placeholders.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       <p>This is an about me section. -Input a paragraph or two here-</p>
     </section>
     <section>
-      <!-- Resume -->
+      <h3>Resume</h3>
+      <iframe src="./assets/current-resume.pdf" width="100%" height="500px"></iframe>
     </section>
     <section>
       <!-- Contact Form -->
