--- a/index.html
+++ b/index.html
@@ -20,26 +20,28 @@
 
     <section id="nav-bar">
       <nav>
-        <a href="">About Me</a>
-        <a href="">Resume</a>
+        <a href="#about-me">About Me</a>
+        <a href="#resume">Resume</a>
         <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
         <a href="">Contact Me</a>
-        <a href="">Projects</a>
+        <a href="#projects">Projects</a>
       </nav>
     </section>
   </header>
 
   <main>
+    <section id="projects">
 
+    </section>
   </main>
 
   <aside>
     <section>
-      <h3>About Me</h3>
+      <h3 id="about-me">About Me</h3>
       <p>This is an about me section. -Input a paragraph or two here-</p>
     </section>
     <section>
-      <h3>Resume</h3>
+      <h3 id="resume">Resume</h3>
       <iframe src="./assets/current-resume.pdf" width="100%" height="500px"></iframe>
     </section>
     <section>
