--- a/index.html
+++ b/index.html
@@ -20,18 +20,29 @@
 
     <section id="nav-bar">
       <nav>
+        <a href="#projects">Projects</a>
         <a href="#about-me">About Me</a>
         <a href="#resume">Resume</a>
         <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
         <a href="">Contact Me</a>
-        <a href="#projects">Projects</a>
       </nav>
     </section>
   </header>
 
   <main>
     <section id="projects">
-
+      <section class="card-main">
+        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+          <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
+          <figcaption>Horiseon</figcaption>
+        </a>
+      </section>
+      <section class="card-small">
+        <a href="https://thebluwiz.github.io/prework-study-guide/">
+          <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
+          <figcaption>Prework Study Guide</figcaption>
+        </a>
+      </section>
     </section>
   </main>
 
