--- a/index.html
+++ b/index.html
@@ -30,28 +30,27 @@
   </header>
 
   <main>
+    <h2>Projects</h2>
     <section id="projects">
-
-      <h2>Projects</h2>
-      <section class="card-main">
+      <section class="card card-main">
         <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
           <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
-          <figcaption>Horiseon</figcaption>
         </a>
+        <figcaption>Horiseon</figcaption>
       </section>
 
-      <section class="card-small">
+      <section class="card card-small">
         <a href="https://thebluwiz.github.io/prework-study-guide/">
           <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
-          <figcaption>Prework Study Guide</figcaption>
         </a>
+        <figcaption>Prework Study Guide</figcaption>
       </section>
 
       <section class="card-small">
         <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
           <img src="./assets/images/vanishing-act.png" alt="Shell Script">
-          <figcaption>Vanishing Act</figcaption>
         </a>
+        <figcaption>Vanishing Act</figcaption>
       </section>
 
     </section>
@@ -67,7 +66,7 @@
     <!-- Resume Still not showing up -->
     <section>
       <h3 id="resume">Resume</h3>
-      <iframe src="./assets/current-resume.pdf" width="100%" height="500px"></iframe>
+      <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
     </section>
 
     <section>
