Arranges .card sections to align image and captions

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <section class="frame"></section>
 
-    <section id="nav-bar">
-      <nav>
-        <a href="#projects">Projects</a>
-        <a href="#about-me">About Me</a>
-        <a href="#resume">Resume</a>
-        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
-        <a href="#contact-me">Contact Me</a>
+    <section >
+      <nav id="nav-bar">
+        <a class="nav-link" href="#projects">Projects</a>
+        <a class="nav-link" href="#about-me">About Me</a>
+        <a class="nav-link" href="#resume">Resume</a>
+        <a class="nav-link" href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
+        <a class="nav-link" href="#contact-me">Contact Me</a>
       </nav>
     </section>
   </header>
@@ -32,26 +32,27 @@
   <main>
     <h2>Projects</h2>
     <section id="projects">
-      <section class="card card-main">
-        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+      
+      <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+        <section class="card card-main">
           <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
-        </a>
-        <figcaption>Horiseon</figcaption>
-      </section>
+          <figcaption>Horiseon</figcaption>
+        </section>
+      </a>
 
-      <section class="card card-small">
-        <a href="https://thebluwiz.github.io/prework-study-guide/">
+      <a href="https://thebluwiz.github.io/prework-study-guide/">
+        <section class="card card-small">
           <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
-        </a>
-        <figcaption>Prework Study Guide</figcaption>
-      </section>
+          <figcaption>Prework Study Guide</figcaption>
+        </section>
+      </a>
 
-      <section class="card-small">
-        <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
+      <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
+        <section class="card card-small">
           <img src="./assets/images/vanishing-act.png" alt="Shell Script">
-        </a>
-        <figcaption>Vanishing Act</figcaption>
-      </section>
+          <figcaption>Vanishing Act</figcaption>
+        </section>
+      </a>
 
     </section>
   </main>
