Working on nav bar

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <img src="./assets/images/profile-pic.jpeg" alt="Jamey Wicklund">
     <h2>Jamey Wicklund</h2>
 
-    <section class="frame"></section>
+    <!-- <section class="frame"></section> -->
 
     <section >
       <nav id="nav-bar">
-        <a class="nav-link" href="#projects">Projects</a>
-        <a class="nav-link" href="#about-me">About Me</a>
-        <a class="nav-link" href="#resume">Resume</a>
-        <a class="nav-link" href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
-        <a class="nav-link" href="#contact-me">Contact Me</a>
+        <a href="#projects">&nbspProjects&nbsp</a>
+        <a href="#about-me">&nbspAbout Me&nbsp</a>
+        <a href="#resume">&nbspResume&nbsp</a>
+        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">&nbspLinkedIn&nbsp</a>
+        <a href="#contact-me">&nbspContact Me&nbsp</a>
       </nav>
     </section>
   </header>
@@ -32,7 +32,7 @@
   <main>
     <h2>Projects</h2>
     <section id="projects">
-      
+
       <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
         <section class="card card-main">
           <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
