Switches nav-bar to flex. Adds sections for links.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <!-- <section class="frame"></section> -->
 
-    <section >
+    <section>
       <nav id="nav-bar">
-        <a href="#projects">&nbspProjects&nbsp</a>
-        <a href="#about-me">&nbspAbout Me&nbsp</a>
-        <a href="#resume">&nbspResume&nbsp</a>
-        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">&nbspLinkedIn&nbsp</a>
-        <a href="#contact-me">&nbspContact Me&nbsp</a>
+        <section><a href="#projects">Projects</a></section>
+        <section><a href="#about-me">About Me</a></section>
+        <section><a href="#resume">Resume</a></section>
+        <section><a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a></section>
+        <section><a href="#contact-me">Contact Me</a></section>
       </nav>
     </section>
   </header>
