Updates nav link to include project header when clicked.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
   </header>
 
   <main>
-    <h2>Projects</h2>
-    <section id="projects">
+    <h2 id="projects">Projects</h2>
+    <section class="projects">
 
       <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
         <section class="card card-main">
