Orders Main flex into rows and appropriate sizes.

--- a/index.html
+++ b/index.html
@@ -33,26 +33,33 @@
     <h2 id="projects">Projects</h2>
     <section class="projects">
 
-      <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
-        <section class="card card-main">
-          <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
-          <figcaption>Horiseon</figcaption>
-        </section>
-      </a>
+      <section>
+        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+          <section class="card card-main">
+            <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
+            <figcaption>Horiseon</figcaption>
+          </section>
+        </a>
+      </section>
 
-      <a href="https://thebluwiz.github.io/prework-study-guide/">
-        <section class="card card-small">
-          <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
-          <figcaption>Prework Study Guide</figcaption>
-        </section>
-      </a>
+      <section class="card card-small">
+        <a href="https://thebluwiz.github.io/prework-study-guide/">
+          <section class="card">
+            <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
+            <figcaption>Prework Study Guide</figcaption>
+          </section>
+        </a>
+      </section>
 
-      <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
-        <section class="card card-small">
-          <img src="./assets/images/vanishing-act.png" alt="Shell Script">
-          <figcaption>Vanishing Act</figcaption>
-        </section>
-      </a>
+      <section class="card card-small">
+        <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
+          <section class="card">
+            <img src="./assets/images/vanishing-act.png" alt="Shell Script">
+            <figcaption>Vanishing Act</figcaption>
+          </section>
+        </a>
+      </section>
+
 
     </section>
   </main>
