Switched nav-bar to box. Adds padding between links.

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     <!-- <section class="frame"></section> -->
 
-    <section>
+    
       <nav id="nav-bar">
-        <section><a href="#projects">Projects</a></section>
-        <section><a href="#about-me">About Me</a></section>
-        <section><a href="#resume">Resume</a></section>
-        <section><a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a></section>
-        <section><a href="#contact-me">Contact Me</a></section>
+        <a href="#projects">Projects</a>
+        <a href="#about-me">About Me</a>
+        <a href="#resume">Resume</a>
+        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
+        <a href="#contact-me">Contact Me</a>
       </nav>
-    </section>
+    
   </header>
 
   <main>
