--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     <!-- <section class="frame"></section> -->
 
-    
-      <nav id="nav-bar">
-        <a href="#projects">Projects</a>
-        <a href="#about-me">About Me</a>
-        <a href="#resume">Resume</a>
-        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
-        <a href="#contact-me">Contact Me</a>
-      </nav>
-    
+
+    <nav id="nav-bar">
+      <a href="#projects">Projects</a>
+      <a href="#about-me">About Me</a>
+      <a href="#resume">Resume</a>
+      <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
+      <a href="#contact-me">Contact Me</a>
+    </nav>
+
   </header>
 
   <main>
@@ -71,15 +71,27 @@
       <p>This is an about me section. -Input a paragraph or two here-</p>
     </section>
 
-    <!-- Resume Still not showing up -->
     <section>
       <h3 id="resume">Resume</h3>
       <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
     </section>
 
-    <section>
+    <section class="form">
       <h3 id="contact-me">Contact Me</h3>
-      <!-- Contact Form Here -->
+      <form>
+        <p>
+          <label for="name">Name:&nbsp;</label>
+          <input type="text" placeholder="First Last" />
+        </p>
+        <p>
+          <label for="email">E-mail:</label>
+          <input type="email" placeholder="me@example.com" />
+        </p>
+        <p>
+          <label for="message"></label>
+          <textarea type="text" placeholder="Can't Wait to Hear From You!"></textarea>
+        </p>
+      </form>
     </section>
 
 
