Moves Card headers to top and removes underline

--- a/index.html
+++ b/index.html
@@ -34,28 +34,30 @@
     <section class="projects">
 
       <section>
-        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+        <!-- Why is "text-decoration: none" necessary?? -->
+        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/"
+          style="text-decoration: none">
           <section class="card card-main">
+            <h4>Horiseon</h4>
             <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
-            <figcaption>Horiseon</figcaption>
           </section>
         </a>
       </section>
 
       <section class="card card-small">
-        <a href="https://thebluwiz.github.io/prework-study-guide/">
+        <a href="https://thebluwiz.github.io/prework-study-guide/" style="text-decoration: none">
           <section class="card">
+            <h4>Prework Study Guide</h4>
             <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
-            <figcaption>Prework Study Guide</figcaption>
           </section>
         </a>
       </section>
 
       <section class="card card-small">
-        <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
+        <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh" style="text-decoration: none">
           <section class="card">
+            <h4>Vanishing Act</h4>
             <img src="./assets/images/vanishing-act.png" alt="Shell Script">
-            <figcaption>Vanishing Act</figcaption>
           </section>
         </a>
       </section>
