Creates global var for light text. Adds button to form

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           <label for="message"></label>
           <textarea type="text" placeholder="Can't Wait to Hear From You!"></textarea>
         </p>
+        <button>Send</button>
       </form>
     </section>
 
