--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
 
     <section>
       <h3 id="about-me">About Me</h3>
-      <p>This is an about me section. -Input a paragraph or two here-</p>
+      <p>Always curious, my time away from keyboard is spent reading science focused news articles, going on long walks
+        with my husband and dog, or imagining what another world could be like with my DND group. </p>
+      <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life. Currently
+        working at Apple Inc. repairing relationships and devices one customer at a time. My mantra for every encounter
+        is <span id="mantra"><i>“What can we accomplish together today?"</i></span>. If you have a project you want to
+        build, or problem you need deconstructed into simpler pieces, I’m your man OR I’ll help find someone in our
+        awesome community that can.</p>
     </section>
 
     <section>
