--- a/index.html
+++ b/index.html
@@ -68,18 +68,18 @@
 
   <aside>
 
-    <section>
+    <section class="about-me">
       <h3 id="about-me">About Me</h3>
       <p>Always curious, my time away from keyboard is spent reading science focused news articles, going on long walks
         with my husband and dog, or imagining what another world could be like with my DND group. </p>
       <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life. Currently
         working at Apple Inc. repairing relationships and devices one customer at a time. My mantra for every encounter
-        is <span id="mantra"><i>“What can we accomplish together today?"</i></span>. If you have a project you want to
+        is <i>“What can we accomplish together today?"</i>. If you have a project you want to
         build, or problem you need deconstructed into simpler pieces, I’m your man OR I’ll help find someone in our
         awesome community that can.</p>
     </section>
 
-    <section>
+    <section class="resume">
       <h3 id="resume">Resume</h3>
       <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
     </section>
