--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
       <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life. Currently
         working at Apple Inc. repairing relationships and devices one customer at a time. My mantra for every encounter
         is <i>“What can we accomplish together today?"</i>. If you have a project you want to
-        build, or problem you need deconstructed into simpler pieces, I’m your man OR I’ll help find someone in our
-        awesome community that can.</p>
+        build or problem you need to solve I'd love to get involved. Community means everything. Lets connect!</p>
     </section>
 
     <section class="resume">
