--- a/index.html
+++ b/index.html
@@ -73,16 +73,18 @@
       <p>Always curious, my time away from keyboard is spent reading science focused news articles, going on long walks
         with my husband and dog, or imagining what another world could be like with my DND group. </p>
       <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life. Currently
-        working at Apple Inc. repairing relationships and devices one customer at a time. My mantra for every encounter
+        employed at Apple Inc. repairing relationships and devices one customer at a time. My mantra during every interaction
         is <i>“What can we accomplish together today?"</i>. If you have a project you want to
         build or problem you need to solve I'd love to get involved. Community means everything. Lets connect!</p>
     </section>
 
+    <!-- make this section silver background -->
     <section class="resume">
       <h3 id="resume">Resume</h3>
       <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
     </section>
 
+    <!-- Make background color silver -->
     <section class="form">
       <h3 id="contact-me">Contact Me</h3>
       <form>
