--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
       <section>
         <!-- Why is "text-decoration: none" necessary?? -->
-        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/"
-          style="text-decoration: none">
+        <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
           <section class="card card-main">
             <h4>Horiseon</h4>
             <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
@@ -45,7 +44,7 @@
       </section>
 
       <section class="card card-small">
-        <a href="https://thebluwiz.github.io/prework-study-guide/" style="text-decoration: none">
+        <a href="https://thebluwiz.github.io/prework-study-guide/">
           <section class="card">
             <h4>Prework Study Guide</h4>
             <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
@@ -54,7 +53,7 @@
       </section>
 
       <section class="card card-small">
-        <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh" style="text-decoration: none">
+        <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
           <section class="card">
             <h4>Vanishing Act</h4>
             <img src="./assets/images/vanishing-act.png" alt="Shell Script">
@@ -74,7 +73,7 @@
         with my husband and dog, or imagining what another world could be like with my DND group. </p>
       <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life. Currently
         employed at Apple Inc. repairing relationships and devices one customer at a time. My mantra during every interaction
-        is <i>“What can we accomplish together today?"</i>. If you have a project you want to
+        is <span class="about-me">“What can we accomplish together today?"</span>. If you have a project you want to
         build or problem you need to solve I'd love to get involved. Community means everything. Lets connect!</p>
     </section>
 
