--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <img src="./assets/images/profile-pic.jpeg" alt="Jamey Wicklund">
-    <h1>Jamey Wicklund</h1>
+    <pre><h1>Jamey Wicklund</h1></pre>
 
     <!-- <section class="frame"></section> -->
 
@@ -33,7 +33,6 @@
     <section class="projects">
 
       <section>
-        <!-- Why is "text-decoration: none" necessary?? -->
         <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
           <section class="card card-main">
             <h4>Horiseon</h4>
