Aligned main cards with borders

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
           </a>
         </section>
 
-        <section class="card card-small">
+        <section>
           <a href="https://thebluwiz.github.io/prework-study-guide/">
-            <section class="card">
+            <section class="card card-small">
               <h4>Prework Study Guide</h4>
               <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
             </section>
           </a>
         </section>
 
-        <section class="card card-small">
+        <section id="off-set-card">
           <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
-            <section class="card">
+            <section class="card card-small">
               <h4>Vanishing Act</h4>
               <img src="./assets/images/vanishing-act.png" alt="Shell Script">
             </section>
