--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="full-size">
     <main>
       <h2 id="projects">Projects</h2>
-      <section class="projects">
+      <section class="projects-flex">
 
         <section>
           <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
