Removed unused CSS selectors

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="full-size">
     <main>
       <h2 id="projects">Projects</h2>
-      <section class="projects-flex">
+      <div class="projects">
 
         <section>
           <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
@@ -47,7 +47,7 @@
           </a>
         </section>
 
-        <section id="off-set-card">
+        <section>
           <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
             <section class="card card-small">
               <h4>Vanishing Act</h4>
@@ -56,8 +56,7 @@
           </a>
         </section>
 
-
-      </section>
+      </div>
     </main>
 
     <aside>
