--- a/index.html
+++ b/index.html
@@ -11,93 +11,94 @@
 </head>
 
 <body>
-  <header>
-    <img src="./assets/images/profile-pic.jpeg" alt="Jamey Wicklund">
-    <pre><h1>Jamey Wicklund</h1></pre>
+  <div id="whole-site">
+    <header>
+      <img src="./assets/images/profile-pic.jpeg" alt="Jamey Wicklund">
+      <pre><h1>Jamey Wicklund</h1></pre>
 
-    <nav id="nav-bar">
-      <a href="#projects">Projects</a>
-      <a href="#about-me">About Me</a>
-      <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
-      <a href="#contact-me">Contact Me</a>
-      <a href="#resume">Resume</a>
-    </nav>
+      <nav id="nav-bar">
+        <a href="#projects">Projects</a>
+        <a href="#about-me">About Me</a>
+        <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
+        <a href="#contact-me">Contact Me</a>
+        <a href="#resume">Resume</a>
+      </nav>
 
-  </header>
-  <div id="full-size">
-    <main>
-      <h2 id="projects">Projects</h2>
-      <div class="projects">
+    </header>
+      <main>
+        <h2 id="projects">Projects</h2>
+        <div class="projects">
 
-        <section>
-          <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
-            <section class="card card-main">
-              <h4>Horiseon</h4>
-              <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
-            </section>
-          </a>
+          <section>
+            <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+              <section class="card card-main">
+                <h4>Horiseon</h4>
+                <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
+              </section>
+            </a>
+          </section>
+
+          <section>
+            <a href="https://thebluwiz.github.io/prework-study-guide/">
+              <section class="card card-small">
+                <h4>Prework Study Guide</h4>
+                <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
+              </section>
+            </a>
+          </section>
+
+          <section>
+            <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
+              <section class="card card-small">
+                <h4>Vanishing Act</h4>
+                <img src="./assets/images/vanishing-act.png" alt="Shell Script">
+              </section>
+            </a>
+          </section>
+
+        </div>
+      </main>
+
+      <aside>
+
+        <section class="about-me">
+          <h3 id="about-me">About Me</h3>
+          <p>Always curious, my time away from keyboard is spent reading science focused news articles, going on long
+            walks
+            with my husband and dog, or imagining what another world could be like with my DND group. </p>
+          <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life.
+            Currently
+            employed at Apple Inc. repairing relationships and devices one customer at a time. My mantra during every
+            interaction
+            is <span class="about-me">“What can we accomplish together today?"</span>. If you have a project you want to
+            build or problem you need to solve I'd love to get involved. Community means everything. Lets connect!</p>
         </section>
 
-        <section>
-          <a href="https://thebluwiz.github.io/prework-study-guide/">
-            <section class="card card-small">
-              <h4>Prework Study Guide</h4>
-              <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
-            </section>
-          </a>
+        <!-- Make background color silver -->
+        <section class="form">
+          <h3 id="contact-me">Contact Me</h3>
+          <form>
+            <p>
+              <label for="name">Name:&nbsp;</label>
+              <input type="text" placeholder="First Last" />
+            </p>
+            <p>
+              <label for="email">E-mail:</label>
+              <input type="email" placeholder="me@example.com" />
+            </p>
+            <p>
+              <label for="message"></label>
+              <textarea type="text" placeholder="Can't Wait to Hear From You!"></textarea>
+            </p>
+            <button>Send</button>
+          </form>
         </section>
 
-        <section>
-          <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
-            <section class="card card-small">
-              <h4>Vanishing Act</h4>
-              <img src="./assets/images/vanishing-act.png" alt="Shell Script">
-            </section>
-          </a>
+        <section class="resume">
+          <h3 id="resume">Resume</h3>
+          <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
         </section>
-
-      </div>
-    </main>
-
-    <aside>
-
-      <section class="about-me">
-        <h3 id="about-me">About Me</h3>
-        <p>Always curious, my time away from keyboard is spent reading science focused news articles, going on long
-          walks
-          with my husband and dog, or imagining what another world could be like with my DND group. </p>
-        <p>I’m just starting in my web development career, but I’ve been working in tech for most of my life. Currently
-          employed at Apple Inc. repairing relationships and devices one customer at a time. My mantra during every
-          interaction
-          is <span class="about-me">“What can we accomplish together today?"</span>. If you have a project you want to
-          build or problem you need to solve I'd love to get involved. Community means everything. Lets connect!</p>
-      </section>
-
-      <!-- Make background color silver -->
-      <section class="form">
-        <h3 id="contact-me">Contact Me</h3>
-        <form>
-          <p>
-            <label for="name">Name:&nbsp;</label>
-            <input type="text" placeholder="First Last" />
-          </p>
-          <p>
-            <label for="email">E-mail:</label>
-            <input type="email" placeholder="me@example.com" />
-          </p>
-          <p>
-            <label for="message"></label>
-            <textarea type="text" placeholder="Can't Wait to Hear From You!"></textarea>
-          </p>
-          <button>Send</button>
-        </form>
-      </section>
-
-      <section class="resume">
-        <h3 id="resume">Resume</h3>
-        <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
-      </section>
-    </aside>
+      </aside>
   </div>
 </body>
 
