Fixes card-small width using flex-basis

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
             </a>
           </section>
 
-          <section>
+          <section class="card-small">
             <a href="https://thebluwiz.github.io/prework-study-guide/">
-              <section class="card card-small">
+              <section class="card">
                 <h4>Prework Study Guide</h4>
                 <img src="./assets/images/prework-study-guide.png" alt="Prework Study Guide">
               </section>
             </a>
           </section>
 
-          <section>
+          <section class="card-small">
             <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
               <section class="card card-small">
                 <h4>Vanishing Act</h4>
