--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
           <section class="card-small">
             <a href="https://github.com/TheBluWiz/vanishingAct/blob/main/VanishingAct.sh">
-              <section class="card card-small">
+              <section class="card">
                 <h4>Vanishing Act</h4>
                 <img src="./assets/images/vanishing-act.png" alt="Shell Script">
               </section>
