--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </section>
 
       <!-- Make background color silver -->
-      <section class="form">
-        <h3 id="contact-me">Contact Me</h3>
+      <section class="form" id="contact-me">
+        <h3 >Contact Me</h3>
         <form>
           <p>
             <label for="name">Name:&nbsp;</label>
