--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#about-me">About Me</a>
         <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
         <a href="#contact-me">Contact Me</a>
-        <a href="#resume">Resume</a>
+        <a href="./assets/current-resume.pdf" download>Resume</a>
       </nav>
 
     </header>
@@ -92,11 +92,6 @@
           </p>
           <button>Send</button>
         </form>
-      </section>
-
-      <section class="resume">
-        <h3 id="resume">Resume</h3>
-        <embed src="./assets/current-resume.pdf" width="100%" height="500px"></embed>
       </section>
     </aside>
   </div>
