Adds data for download me tooltip

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#about-me">About Me</a>
         <a href="https://www.linkedin.com/in/jamey-wicklund-19673851/">LinkedIn</a>
         <a href="#contact-me">Contact Me</a>
-        <a href="./assets/current-resume.pdf" download>Resume</a>
+        <a href="./assets/current-resume.pdf" data-tooltip="Download Me!!" id="download-me" download>Resume</a>
       </nav>
 
     </header>
