Adds comments to code

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <h2 id="projects">Projects</h2>
       <div class="projects">
 
+        <!-- Makes entire card a clickable link to project -->
         <section>
           <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
             <section class="card card-main">
@@ -74,7 +75,6 @@
           build or problem you need to solve I'd love to get involved. Community means everything. Lets connect!</p>
       </section>
 
-      <!-- Make background color silver -->
       <section class="form" id="contact-me">
         <h3 >Contact Me</h3>
         <form>
