Updates Main Project to Giphtionary

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
         <!-- Makes entire card a clickable link to project -->
         <section>
-          <a href="https://thebluwiz.github.io/Horiseon-Application-01-HTML-CSS-and-Git-Code-Refactor/">
+          <a href="https://TheBluWiz.github.io/Giphtionary//">
             <section class="card card-main">
-              <h4>Horiseon</h4>
-              <img src="./assets/images/horiseon-application.png" alt="Horiseon Web-Application">
+              <h4>Giphtionary</h4>
+              <img src="./assets/images/giphtionary.png" alt="Giphtionary">
             </section>
           </a>
         </section>
